@@ -8,7 +8,7 @@
 
 package io.gdcc.xoai.util;
 
-import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
 
 
 /**
@@ -19,10 +19,6 @@ public class URLEncoder {
     public static final String SEPARATOR = "&";
 
     public static String encode(String value) {
-        try {
-            return java.net.URLEncoder.encode(value, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            return value;
-        }
+        return java.net.URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 }
